# logger-server

./: .pre-commit-config.yaml  alembic.ini  poetry.toml  pyproject.toml
app/: __main__.py  main.py
app/alembic/: env.py
app/alembic/versions/: 5a31b474d01b_init.py
app/api/: deps.py  main.py
app/api/routes/: logger.py  login.py  users.py
app/core/: config.py  security.py
app/crud/: crud_log.py  crud_user.py
app/models/: __init__.py  base.py  logs.py  other.py  users.py
requirements/: prod.txt
